--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Abs Tour & Travel</title>
+  <title>Abus Tour & Travel</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -162,18 +162,18 @@
       <div class="modal-body">
         <ul class="list-group">
         <li class="list-group-item">Kereta Cepat</li>
-        <li class="list-group-item">Hotel Bintang 5 di Madinah Hayyah Golden (setaraf)</li>
-        <li class="list-group-item">Hotel Bintang 5 di Mekkah Azka Al-Safha (setaraf)</li>
-        <li class="list-group-item">Pesawat Saudi Airlines (setaraf)</li>
+        <li class="list-group-item">Hotel Bintang 5 di Madinah Hayyah Golden (Setaraf)</li>
+        <li class="list-group-item">Hotel Bintang 5 di Mekkah Azka Al-Safha (Setaraf)</li>
+        <li class="list-group-item">Pesawat Saudi Airlines (Setaraf)</li>
         <li class="list-group-item">Full Perlengkapan</li>
         <li class="list-group-item">Makan 3 kali sehari</li>
         <li class="list-group-item">Plus Thaif</li>
         <li class="list-group-item">Muthawif yang berpengalaman sesuai sunnah</li>
         <li class="list-group-item">Full heandling</li>
-        <li class="list-group-item">Driver dan transporasi bus untuk jiarah tour</li>
+        <li class="list-group-item">Driver dan Transporasi Bus untuk Jiarah Tour</li>
         <li class="list-group-item">Asuransi Perjalanan</li>
-        <li class="list-group-item">Manasik 2 kali (kantor pusat dan Madinah)</li>
-        <li class="list-group-item">Air zamzam 5 liter</li>
+        <li class="list-group-item">Manasik 2 kali (Kantor Pusat dan Madinah)</li>
+        <li class="list-group-item">Air Zamzam 5 liter</li>
         </ul>
       </div>
       <div class="modal-footer">
@@ -265,6 +265,17 @@
       </div>
     </div>
   </div>
+</div>
+
+<div class="row p-5 mb-5" style="background: #eceff1;">
+  <h3 class="text-uppercase text-center fw-bold text-primary mb-5">Percayakan Perjalanan Suci Mu bersama kami</h3>
+  <p class="text-justify mb-5">Kami telah memberangkatkan ribuan jamaah dan memberikan Pengalaman spiritual dengan Da'i dan mutawif berpengalaman sesuai sunnah</p>
+  <ul class="list-group list-group-flush">
+    <li class="list-group-item" style="background: #eceff1;"><i class="text-primary me-3 fa fa-star" aria-hidden="true"></i> All in one packace dengan Best Value</li>
+    <li class="list-group-item" style="background: #eceff1;"><i class="text-primary me-3 fa fa-thumbs-up" aria-hidden="true"></i> Konsep silahturahmi kekeluargaan</li>
+    <li class="list-group-item" style="background: #eceff1;"><i class="text-primary me-3 fa fa-check-square" aria-hidden="true"></i> Jaminan keberangkatan sesuai jadwal anda</li>
+    <li class="list-group-item" style="background: #eceff1;"><i class="text-primary me-3 fa fa-level-down" aria-hidden="true"></i> HPP yang sangat rendah tidak mengurangi fasilitas</li>
+  </ul>
 </div>
 
 <div class="row mb-5">
